# pyskel.old

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  setup.py
src/pyskel/: __init__.py
tests/: test_version.py
